--- a/app/src/main/res/layout/layout_main.xml
+++ b/app/src/main/res/layout/layout_main.xml
@@ -23,10 +23,10 @@
 
 
         <androidx.recyclerview.widget.RecyclerView
-            android:layout_marginHorizontal="@dimen/_10sdp"
             android:id="@+id/rvItemsID"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/_10sdp"
             android:layout_marginVertical="@dimen/_10sdp"
             android:layout_marginBottom="@dimen/_65sdp"
             app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
@@ -44,18 +44,42 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/rvItemsID">
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:layout_marginTop="@dimen/_20sdp"
-                android:layout_marginHorizontal="@dimen/_10sdp"
-                android:id="@+id/rvtransactionID"
+            <FrameLayout
+                android:id="@+id/framelayout"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
+                android:layout_marginHorizontal="@dimen/_15sdp"
+                android:layout_marginTop="@dimen/_20sdp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
 
-            </androidx.recyclerview.widget.RecyclerView>
+            </FrameLayout>
+
+            <!--<androidx.viewpager2.widget.ViewPager2
+                android:id="@+id/view_pager"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_marginTop="@dimen/_20sdp"
+                android:layout_marginHorizontal="@dimen/_15sdp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />-->
+
+            <!-- <androidx.recyclerview.widget.RecyclerView
+                 android:layout_marginTop="@dimen/_20sdp"
+                 android:layout_marginHorizontal="@dimen/_10sdp"
+                 android:id="@+id/rvtransactionID"
+                 android:layout_width="match_parent"
+                 android:layout_height="0dp"
+                 app:layout_constraintBottom_toBottomOf="parent"
+                 app:layout_constraintEnd_toEndOf="parent"
+                 app:layout_constraintStart_toStartOf="parent"
+                 app:layout_constraintTop_toTopOf="parent">
+
+             </androidx.recyclerview.widget.RecyclerView>-->
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
